# SmallPointer

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md
android/: .gitignore
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backup/al/: al.h
backup/gltf/: gltf.c
backup/loader/both/: both.h
backup/loader/client/: client.c  client.h  client_a.h  client_c.h  client_m.c  client_m.h  client_n.c  client_n.h  client_u.c  client_u.h
backup/loader/client/image/: image.c
backup/loader/client/keyframe/: keyframe.h
backup/loader/client/pose/: pose.c  pose.h
backup/loader/client/shader/: shader.c  shader.h
backup/loader/server/: server.c  server.h  server_a.h  server_c.c  server_c.h  server_m.c  server_m.h  server_n.c  server_n.h  server_u.c  server_u.h
backup/m3x3/: M3x3.h
backup/network/linux/: linux_client.c  linux_client.h  linux_server.c  linux_server.h
backup/quaternion/: Quaternion.h
backup/shader/frag/: a.frag
backup/shader/vert/: a.vert  b.vert
backup/src/al/nali/: alnali.c
backup/src/collada/: collada.c
backup/src/collada/file_reader/: file_reader.c  file_reader.h
backup/src/collada/file_writer/: file_writer.c
backup/src/collada/graphic_reader/: graphic_reader.c
backup/src/file/png/: png.c  png.h
backup/src/lwjgl/al/: AL.c  AL11.c  ALC11.c
backup/src/lwjgl/gl/: GL13.c  GL15.c  GLContext.c
backup/src/lwjgl/linux/: LinuxContextImplementation.c  LinuxDisplay.c  LinuxEvent.c  LinuxKeyboard.c
backup/src/str/: str.c  str.h
backup/src/v3/: V3.h
backup/v2/: V2.h
backup/v3/: v3.c  v3.h
backup/v4/: V4.h
backup/vec/: vec.c  vec.h
doc/: build.md  code.md  gen.md  gentoo.md  mc.md  path.md
run/: android-apk  android-ffmpeg  android-tool  blender-run  config  config-android  config-gen  config-linux  config-mc  config-test  debug  ffmpeg-android  gdb  gentoo  java-gen  lib-wayland  mc-gen  mc-run  scrcpy-run  shader-vulkan  vulkan  wayland
source/blend/: Font.blend  Font.blend1  StarField.blend
source/model/: Font.blend
source/shader/: 0.frag  0.vert
source/shader/frag/: 0.frag
source/shader/vert/: 0.vert
src/: pch.h  src.c  src.h  test.h
src/al/: al.c  al.h
src/al/nali/: alnali.c
src/android/: android.c  android.h
src/area/: area.c  area.h
src/area/model/: model.c  model.h
src/area/user/: user.c  user.h
src/collada/: collada.c  collada.h
src/collada/file_reader/: file_reader.c  file_reader.h
src/collada/file_writer/: file_writer.c  file_writer.h
src/collada/graphic_reader/: graphic_reader.c  graphic_reader.h
src/debug/: debug.c  debug.h
src/empty/: empty.c  empty.h
src/entity/both/pomi0/: pomi0.c  pomi0.h
src/entity/both/pomi1/: pomi1.c  pomi1.h
src/entity/both/pomi2/: pomi2.c  pomi2.h
src/entity/client/pomi0/: pomi0.c  pomi0.h
src/entity/pomi0/: pomi0_b.c  pomi0_b.h  pomi0_c.c  pomi0_c.h  pomi0_s.c  pomi0_s.h
src/entity/server/pomi0/: pomi0.c  pomi0.h
src/ffmpeg/: ffmpeg.c  ffmpeg.h
src/file/: file.c  file.h
src/gl/nali/: glnali.c
src/gltf/: gltf.c
src/input/: input.c  input.h
src/input/libinput/: libinput.c  libinput.h
src/libinput/: libinput.c  libinput.h
src/loader/both/: both.c  both.h
src/loader/client/: client.c  client.h  client_a.h  client_c.c  client_c.h  client_f.c  client_f.h  client_i.h  client_m.c  client_m.h  client_u.c  client_u.h
src/loader/client/image/: image.c  image.h
src/loader/client/keyframe/: keyframe.c  keyframe.h
src/loader/client/model/: model.c  model.h
src/loader/client/pose/: pose.c  pose.h
src/loader/client/shader/: shader.c  shader.h
src/loader/server/: server.c  server.h  server_a.h  server_c.c  server_c.h  server_f.c  server_f.h  server_i.h  server_m.c  server_m.h  server_u.c  server_u.h
src/lwjgl/: lwjgl.c  lwjgl.h
src/lwjgl/al/: AL.c  AL10.c  AL11.c  ALC10.c  ALC11.c  EFX10.c
src/lwjgl/gl/: GL13.c  GL14.c  GL15.c  GL20.c  GL30.c  GLContext.c
src/lwjgl/gl/11/: GL11.c  (+3 more)
src/lwjgl/linux/: LinuxContextImplementation.c  LinuxDisplay.c  LinuxDisplayPeerInfo.c  LinuxEvent.c  LinuxKeyboard.c  LinuxMouse.c  LinuxPeerInfo.c
src/math/: math.c  math.h
src/math/m4x4/: m4x4.c  m4x4.h
src/math/v3/: v3.c  v3.h
src/math/v4/: v4.c  v4.h
src/mc/: mc.c  mc.h
src/mc/class/: class.c  class.h
src/mc/field/: field.h
src/mc/method/: method.h
src/network/: network.c  network.h  network_client.c  network_client.h  network_server.c  network_server.h
src/network/linux/: linux_client.c  linux_client.h  linux_server.c  linux_server.h
src/raw/: raw.c  raw.h
src/raw/both/: both.c  both.h
src/raw/client/: client.c  client.h  clienta.c  clienta.h  clienti.h  clientm.c  clientm.h  clientu.c  clientu.h
src/raw/server/: server.c  server.h  servera.c  servera.h  serveri.h  serverm.c  serverm.h  serveru.c  serveru.h
src/render/vk/: fence.h  framebuffer.h  image.h  imageview.h  renderpass.h  sampler.h  semaphore.h  shader.h  vk.c  vk.h
src/scene/: scene.c  scene.h
src/surface/: surface.c  surface.h  surface_main.c
src/surface/android/: android.c  android.h
src/test/: test.h
src/test/3d/: 3d.c  3d.h
src/view/: view.c  view.h
src/view/data/: data.c  data.h
src/view/starfield/: starfield.c  starfield.h
src/vk/: fence.h  renderpass.h  sampler.h  vk.c  vk.h
src/vk/buffer/: buffer.c  buffer.h
src/vk/commandbuffer/: commandbuffer.c  commandbuffer.h
src/vk/debug/: debug.c  debug.h
src/vk/descriptorset/: descriptorset.h
src/vk/draw/: draw.c
src/vk/fence/: fence.c  fence.h
src/vk/graphicspipeline/: colorblendstatecreateinfo.h  graphicspipeline.h  inputassemblystatecreateinfo.h  multisamplestatecreateinfo.h  vertexinputstatecreateinfo.h
src/vk/graphicspipelines/: graphicspipelines.c
src/vk/imageview/: image.h  imageview.h
src/vk/instance/: instance.c  instance.h
src/vk/queue/: queue.c  queue.h
src/vk/release/: fence.h  framebuffer.h  renderpass.h  sampler.h
src/vk/semaphore/: semaphore.c  semaphore.h
src/vk/shadermodule/: shadermodule.c  shadermodule.h
src/vk/surface/: surface.c  surface.h
src/vk/swapchain/: swapchain.c  swapchain.h
src/vk/vk/: vk.h
(+324 files in other folders)
